# MultimediaDataProcessing

BitTorrent/: CMakeLists.txt  main.cpp  tmp
Bitpacking/: CMakeLists.txt  main.cpp
Huffman/: CMakeLists.txt  huffman1.cpp  huffman2.cpp
Huffman/data/1/: output  output_txt
MDPExam/: CMakeLists.txt  snappy.cpp
MDPExam6/: CMakeLists.txt  lz78encode.cpp  lz78encode.hpp  main.cpp
MDPExam7/: CMakeLists.txt  compress.cpp  compress.h  json.cpp  main.cpp  ppm.cpp  ppm.h  process_ppm.cpp  process_ppm.h
Packbits/: CMakeLists.txt  packbits.cpp
SortNumbers/: CMakeLists.txt  main.c
YUV/: CMakeLists.txt  main.cpp  y4m_color.cpp  y4m_gray.cpp
